# ADfR-Assigment-3

./: README.md
cam_capture/: CMakeLists.txt  package.xml
cam_capture/include/cam_capture/: brightness_level_detector.hpp  light_position_indicator.hpp
cam_capture/src/: bld_node.cpp  brightness_level_detector.cpp  light_position_indicator.cpp  lpi_node.cpp
closed_loop/src/: controller.cpp
jiwy_simulator/launch/: jiwy_simulator.launch.py
jiwy_simulator/src/: jiwy_simulator.cpp
